--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -92,6 +92,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
+                        <div class="about-one__content">
+                            <!-- about content start-->
+                            <div class="section-title">
+                                <h5 class="section-title__tagline section-title__tagline--has-dots"></h5>
+                                <h2 class="section-title__title">Sobre el programa</h2>
+                            </div><!-- section-title -->
+                            <p class="about-one__content__text-one">La tasa de desempleo juvenil en España alcanza el 30%, el doble que la media europea. A esto se suma una preocupante tasa de emprendimiento juvenil, que apenas llega al 6%, muy por debajo de países como Reino Unido o Países Bajos. Además, en el último año, Cataluña ha perdido más de 120.000 personas debido a la fuga de talento.</p></br>
+                        </div><!-- about content end-->
+                    </div>
+                    <div class="col-lg-6">
                         <div class="about-one__thumb wow fadeInLeft animated" data-wow-delay="300ms">
                             <!-- about thumb start -->
                             <div class="about-one__thumb__round--top"></div>
@@ -104,16 +114,6 @@
                             <div class="about-one__thumb__round--bottom"></div>
                         </div><!-- about thumb end -->
                     </div>
-                    <div class="col-lg-6">
-                        <div class="about-one__content">
-                            <!-- about content start-->
-                            <div class="section-title">
-                                <h5 class="section-title__tagline section-title__tagline--has-dots"></h5>
-                                <h2 class="section-title__title">Sobre el programa</h2>
-                            </div><!-- section-title -->
-                            <p class="about-one__content__text-one">La tasa de desempleo juvenil en España alcanza el 30%, el doble que la media europea. A esto se suma una preocupante tasa de emprendimiento juvenil, que apenas llega al 6%, muy por debajo de países como Reino Unido o Países Bajos. Además, en el último año, Cataluña ha perdido más de 120.000 personas debido a la fuga de talento.</p></br>
-                        </div><!-- about content end-->
-                    </div>
                 </div>
             </div>
         </section>
@@ -123,15 +123,6 @@
         <section class="about-one">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
-                        <div class="about-one__content">
-                            <!-- about content start-->
-                            <div class="section-title">
-                                <h2 class="section-title__title">¿La solución?</h2>
-                            </div><!-- section-title -->
-                            <p class="about-one__content__text-one">Para hacer frente a esta situación, nace Asociación para el Talento, un puente entre jóvenes con formación en soft skills y las entidades que buscan incorporar ese talento. Nuestra misión es ser un actor clave en el ecosistema empresarial, captando y formando talento joven, con el objetivo de mejorar su empleabilidad o fomentar la autoocupación.</p>
-                        </div><!-- about content end-->
-                    </div>
                     <div class="col-lg-6">
                         <div class="about-one__thumb wow fadeInLeft animated" data-wow-delay="300ms">
                             <!-- about thumb start -->
@@ -145,10 +136,65 @@
                             <div class="about-one__thumb__round--bottom"></div>
                         </div><!-- about thumb end -->
                     </div>
+                    <div class="col-lg-6">
+                        <div class="about-one__content">
+                            <!-- about content start-->
+                            <div class="section-title">
+                                <h2 class="section-title__title">¿La solución?</h2>
+                            </div><!-- section-title -->
+                            <p class="about-one__content__text-one">Para hacer frente a esta situación, nace Asociación para el Talento, un puente entre jóvenes con formación en soft skills y las entidades que buscan incorporar ese talento. Nuestra misión es ser un actor clave en el ecosistema empresarial, captando y formando talento joven, con el objetivo de mejorar su empleabilidad o fomentar la autoocupación.</p>
+                        </div><!-- about content end-->
+                    </div>
                 </div>
             </div>
         </section>
         <!-- Solution End -->
+
+        <!-- Como lo hacemos Start -->
+        <section class="why-choose">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 wow fadeInLeft animated" data-wow-delay="200ms">
+                        <div class="section-title">
+                            <h5 class="section-title__tagline section-title__tagline--has-dots"></h5>
+                            <h2 class="section-title__title">¿Cómo lo hacemos?</h2>
+                        </div><!-- section-title -->
+                        <div class="why-choose__box">
+                            <div class="why-choose__box__icon">
+                                <span class="icon-tick"></span>
+                            </div>
+                            <h3 class="why-choose__box__title">Construyendo una red de colaboración</h3>
+                            <p class="why-choose__box__text">Durante 2025, estamos creando alianzas estratégicas con asociaciones sin ánimo de lucro como UPF Society, el CETT y Technova Young, sumando esfuerzos para multiplicar el impacto de nuestra misión y ampliar las oportunidades para los jóvenes.</p>
+                        </div><!-- Why Choose Box -->
+                        <div class="why-choose__box">
+                            <div class="why-choose__box__icon">
+                                <span class="icon-tick"></span>
+                            </div>
+                            <h3 class="why-choose__box__title">Formaciones con el respaldo de empresas</h3>
+                            <p class="why-choose__box__text">Cada programa de formación subvencionada contará con el patrocinio de una empresa o startup, que aportará su experiencia y propondrá un reto empresarial real, ofreciendo así un aprendizaje práctico y aplicado.</p>
+                        </div><!-- Why Choose Box -->
+                        <div class="why-choose__box">
+                            <div class="why-choose__box__icon">
+                                <span class="icon-tick"></span>
+                            </div>
+                            <h3 class="why-choose__box__title">Acceso a oportunidades profesionales únicas</h3>
+                            <p class="why-choose__box__text">Todos los estudiantes tendrán la posibilidad de conectar con los responsables de RRHH de empresas colaboradoras y participar en desafíos empresariales. Al finalizar el año, los 25 mejores participantes serán seleccionados para un viaje de negocios a Londres, donde podrán conocer de cerca el ecosistema empresarial internacional.</p>
+                        </div><!-- Why Choose Box -->
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="why-choose__image">
+                            <div class="why-choose__image__shape wow fadeIn animated" data-wow-delay="200ms">
+                                <img src="assets/images/resources/why-choose-1-4.png" alt="ogency">
+                            </div>
+                            <div class="why-choose__image__author wow fadeInRight animated" data-wow-delay="300ms">
+                                <img src="assets/images/resources/why-choose-1-2.png" alt="ogency">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Como lo hacemos End -->
 
         <!--Testimonial Start-->
         <section class="testimonial-three">
