--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
             "autoplay": true,
             "nav":false,
             "dots":true,
+            "autoplayHoverPause": true,
             "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"],
             "responsive":{
                 "0":{
