--- a/index.html
+++ b/index.html
@@ -645,6 +645,20 @@
         </section>
         <!-- Team Start -->
    
+        <section class="dynamic-slider">
+            <div class="dynamic-slider__content">
+              <span class="static-text">Always ready to</span>
+              <span class="dynamic-text">
+                <span>challenge</span>
+                <span>evolve</span>
+                <span>connect</span>
+                <span>make a difference</span>
+              </span>
+            </div>
+          </section>
+         
+          
+
         <!--Testimonial Start-->
         <section class="testimonial-one" style="background-image: url(assets/images/backgrounds/testimonial-bg-1.png);">
             <div class="container">
@@ -656,78 +670,70 @@
                         </div><!-- section-title -->
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-xl-4">
-                        <div class="team-one__item">
-                            <div class="team-one__item__image custom-box">
-                                <span>Always </br>ready to...</span>
-                            </div>
-                        </div><!-- /.team-one -->
-                    </div>
-                    <div class="col-xl-8">
-                        <div class="testimonial-one__carousel ogency-owl__carousel owl-theme owl-carousel" data-owl-options='{
-                    "items": 1,
-                    "margin": 0,
+                <div class="testimonial-three__carousel ogency-owl__carousel owl-theme owl-carousel" data-owl-options='{
+                    "items": 2,
+                    "margin": 30,
                     "smartSpeed": 700,
                     "loop":true,
                     "autoplay": true,
                     "nav":true,
                     "dots":false,
-                    "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"]
+                    "autoplayHoverPause": true,
+                    "navText": ["<span class=\"icon-left-arrow\"></span>","<span class=\"icon-right-arrow\"></span>"],
+                    "responsive":{
+                        "0":{
+                            "items":1,
+                            "margin": 0
+                        },
+                        "992":{
+                            "items": 2
+                        }
+                    }
                     }'>
-                            <!-- Testimonial Item -->
-                            <div class="testimonial-one__item">
-                                <div class="testimonial-one__item__content">
-                                    <div class="testimonial-one__item__meta">Always ready to challenge</div><!-- testimonial-meta -->
-                                    <div class="testimonial-one__item__quote">
-                                        Nunca es suficiente con lo que ya sabemos. Siempre estamos listos para cuestionar, 
-                                        probar nuevas ideas y explorar caminos inexplorados. Creemos en el aprendizaje 
-                                        a través de la acción, impulsando a nuestros alumnos a desafiar el status quo con 
-                                        soluciones creativas y disruptivas.
-                                    </div><!-- testimonial-quote -->
-                                </div><!-- testimonial-content -->
+                            <!-- Filosofia item -->
+                            <div class="testimonial-three__item">
+                                <h3 class="testimonial-three__item__name">Always ready to challenge</h3><!-- testimonial-name -->
+                                <div class="testimonial-three__item__quote">
+                                    Nunca es suficiente con lo que ya sabemos. Siempre estamos listos para cuestionar, 
+                                    probar nuevas ideas y explorar caminos inexplorados. Creemos en el aprendizaje a 
+                                    través de la acción, impulsando a nuestros alumnos a desafiar el status quo con soluciones 
+                                    creativas y disruptivas.
+                                </div><!-- testimonial-quote -->
                             </div>
-                            <!-- Testimonial Item -->
-                            <!-- Testimonial Item -->
-                            <div class="testimonial-one__item">
-                                <div class="testimonial-one__item__content">
-                                    <div class="testimonial-one__item__meta">Always ready to make a difference</div><!-- testimonial-meta -->
-                                    <div class="testimonial-one__item__quote">
-                                        El impacto no se logra esperando, sino tomando acción. En Phimister’s 
-                                        Business School creemos que cada proyecto, por pequeño que sea, puede 
-                                        generar un cambio significativo. Nos preparamos constantemente para dejar 
-                                        huella en lo personal, empresarial y social, asegurando que cada paso cuente.
-                                    </div><!-- testimonial-quote -->
-                                </div><!-- testimonial-content -->
+                            <!-- Filosofia Item -->
+                            <!-- Filosofia item -->
+                            <div class="testimonial-three__item">
+                                <h3 class="testimonial-three__item__name">Always ready to make a difference</h3><!-- testimonial-name -->
+                                <div class="testimonial-three__item__quote">
+                                    El impacto no se logra esperando, sino tomando acción. En Phimister’s Business School creemos 
+                                    que cada proyecto, por pequeño que sea, puede generar un cambio significativo. Nos preparamos 
+                                    constantemente para dejar huella en lo personal, empresarial y social, asegurando que cada 
+                                    paso cuente.
+                                </div><!-- testimonial-quote -->
                             </div>
-                            <!-- Testimonial Item -->
-                                                         <!-- Testimonial Item -->
-                            <div class="testimonial-one__item">
-                                <div class="testimonial-one__item__content">
-                                    <div class="testimonial-one__item__meta">Always ready to evolve</div><!-- testimonial-meta -->
-                                    <div class="testimonial-one__item__quote">
-                                        El aprendizaje nunca se detiene. Creemos en el crecimiento continuo, adaptándonos 
-                                        a los cambios del mercado y preparándonos para los desafíos del futuro. En Phimister’s 
-                                        Business School, cada experiencia es una oportunidad para evolucionar y mejorar tanto 
-                                        profesional como personalmente.
-                                    </div><!-- testimonial-quote -->
-                                </div><!-- testimonial-content -->
+                            <!-- Filosofia Item -->
+                            <!-- Filosofia item -->
+                            <div class="testimonial-three__item">
+                                <h3 class="testimonial-three__item__name">Always ready to evolve</h3><!-- testimonial-name -->
+                                <div class="testimonial-three__item__quote">
+                                    El aprendizaje nunca se detiene. Creemos en el crecimiento continuo, adaptándonos a los 
+                                    cambios del mercado y preparándonos para los desafíos del futuro. En Phimister’s Business 
+                                    School, cada experiencia es una oportunidad para evolucionar y mejorar tanto profesional 
+                                    como personalmente.
+                                </div><!-- testimonial-quote -->
                             </div>
-                            <!-- Testimonial Item -->
-                                                         <!-- Testimonial Item -->
-                            <div class="testimonial-one__item">
-                                <div class="testimonial-one__item__content">
-                                    <div class="testimonial-one__item__meta">Always ready to connect</div><!-- testimonial-meta -->
-                                    <div class="testimonial-one__item__quote">
-                                        El éxito no se alcanza solo, siempre estamos listos para conectar, compartir y aprender juntos. 
-                                        Valoramos la diversidad de ideas y la sinergia que surge al colaborar con otros, porque sabemos 
-                                        que el crecimiento ocurre cuando trabajamos en equipo y aprendemos haciendo.
-                                    </div><!-- testimonial-quote -->
-                                </div><!-- testimonial-content -->
+                            <!-- Filosofia Item -->
+                            <!-- Filosofia item -->
+                            <div class="testimonial-three__item">
+                                <h3 class="testimonial-three__item__name">Always ready to connect</h3><!-- testimonial-name -->
+                                <div class="testimonial-three__item__quote">
+                                    El éxito no se alcanza solo, siempre estamos listos para conectar, compartir y 
+                                    aprender juntos. Valoramos la diversidad de ideas y la sinergia que surge al colaborar 
+                                    con otros, porque sabemos que el crecimiento ocurre cuando trabajamos en equipo y 
+                                    aprendemos haciendo.
+                                </div><!-- testimonial-quote -->
                             </div>
-                            <!-- Testimonial Item -->
-                        </div>
-                    </div>
+                            <!-- Filosofia Item -->
                 </div>
             </div>
         </section>
