--- a/talent-asoc.html
+++ b/talent-asoc.html
@@ -53,8 +53,8 @@
                         <a href="index.html">
                             <img
                                 src="assets/images/logo/asociaciontalento.png"
-                                width="200"
-                                height="90"
+                                width="280"
+                                height="126"
                                 alt="Phimister"
                             />
                         </a>
@@ -358,7 +358,7 @@
                         </div><!-- /.footer-widget -->
                     </div>
                 </div><!-- /.row -->
-                <p class="main-footer__copyright wow fadeInUp animated" data-wow-delay="500ms">© Copyright <span class="dynamic-year"></span><!-- /.dynamic-year --> by <a href="index.html">Dok7</a></p>
+                <p class="main-footer__copyright wow fadeInUp animated" data-wow-delay="500ms">© Copyright <span class="dynamic-year"></span><!-- /.dynamic-year --> by <a href="index.html">Phimister Business School</a></p>
             </div><!-- /.container -->
         </footer><!-- /.main-footer -->
 
