--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
                         </div><!-- /.footer-widget -->
                     </div>
                 </div><!-- /.row -->
-                <p class="main-footer__copyright wow fadeInUp animated" data-wow-delay="500ms">© Copyright <span class="dynamic-year"></span><!-- /.dynamic-year --> by <a href="index.html">Dok7</a></p>
+                <p class="main-footer__copyright wow fadeInUp animated" data-wow-delay="500ms">© Copyright <span class="dynamic-year"></span><!-- /.dynamic-year --> by <a href="index.html">Phimister Business School</a></p>
             </div><!-- /.container -->
         </footer><!-- /.main-footer -->
 
