--- a/contact.html
+++ b/contact.html
@@ -116,15 +116,16 @@
                                     <div class="contact-one__input-box">
                                         <select class="selectpicker" aria-label="Default select example">
                                             <option selected>Selecciona el programa</option>
-                                            <option value="1">España emprende</option>
-                                            <option value="2">PICE</option>
-                                            <option value="3">PAEM</option>
+                                            <option value="1">ESPAÑA EMPRENDE</option>
+                                            <option value="2">TALENTO JOVEN</option>
+                                            <option value="3">EMPRENDEDORAS</option>
+                                            <option value="4">PRIMER</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="contact-one__input-box text-message-box">
-                                        <textarea name="message" placeholder="Write Comment"></textarea>
+                                        <textarea name="message" placeholder="Comentario (opcional)"></textarea>
                                     </div>
                                     <div class="contact-one__btn-box">
                                         <button type="submit" class="ogency-btn">Enviar</button>
