--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <div class="col-xl-3 col-md-6 wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="service-three__item">
                             <div class="service-three__item__thumb">
-                                <img src="assets/images/service/services-3-1.jpg" alt="ogency" />
+                                <img src="assets/images/home/seed/Spark.png" alt="ogency" />
                             </div><!-- /.service-image -->
                             <div class="service-three__item__normal">
                                 <h3 class="service-three__item__normal__title">Spark</h3>
@@ -339,7 +339,7 @@
                     <div class="col-xl-3 col-md-6 wow fadeInUp animated" data-wow-delay="200ms">
                         <div class="service-three__item">
                             <div class="service-three__item__thumb">
-                                <img src="assets/images/service/services-3-2.jpg" alt="ogency" />
+                                <img src="assets/images/home/seed/Emerge.png" alt="ogency" />
                             </div><!-- /.service-image -->
                             <div class="service-three__item__normal">
                                 <h3 class="service-three__item__normal__title">Emerge</h3>
@@ -357,7 +357,7 @@
                     <div class="col-xl-3 col-md-6 wow fadeInUp animated" data-wow-delay="300ms">
                         <div class="service-three__item">
                             <div class="service-three__item__thumb">
-                                <img src="assets/images/service/services-3-3.jpg" alt="ogency" />
+                                <img src="assets/images/home/seed/Engage.png" alt="ogency" />
                             </div><!-- /.service-image -->
                             <div class="service-three__item__normal">
                                 <h3 class="service-three__item__normal__title">Engage</h3>
@@ -373,7 +373,7 @@
                     <div class="col-xl-3 col-md-6 wow fadeInUp animated" data-wow-delay="400ms">
                         <div class="service-three__item">
                             <div class="service-three__item__thumb">
-                                <img src="assets/images/service/services-3-4.jpg" alt="ogency" />
+                                <img src="assets/images/home/seed/Deliver.png" alt="ogency" />
                             </div><!-- /.service-image -->
                             <div class="service-three__item__normal">
                                 <h3 class="service-three__item__normal__title">Deliver</h3>
