--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Alexander.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
@@ -422,7 +422,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Sebastian.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
@@ -439,7 +439,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-8.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Alberto.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
@@ -456,7 +456,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-5.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Laia.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
@@ -473,11 +473,11 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-2.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Ramon.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
-                                    <a href="https://linkedin.com/">Ramon Medina</a>
+                                    <a href="https://linkedin.com/">Ramon </br>Medina</a>
                                 </h3><!-- /.team-name -->
                                 <span class="team-one__item__designation">Chief Learning Officer</span><!-- /.team-designation -->
                                 <div class="team-one__item__social-wrapper">
@@ -507,7 +507,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-6.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Vanessa.jpg" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
@@ -524,7 +524,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Jose-Rubio.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
@@ -541,11 +541,11 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-4.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Chabely.jpg" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
-                                    <a href="https://linkedin.com/">Chabely Amaya</a>
+                                    <a href="https://linkedin.com/">Chabely</br> Amaya</a>
                                 </h3><!-- /.team-name -->
                                 <span class="team-one__item__designation">Coach y asesora financiera</span><!-- /.team-designation -->
                                 <div class="team-one__item__social-wrapper">
@@ -558,11 +558,11 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Montse.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
-                                    <a href="https://linkedin.com/">Montse Puyalto</a>
+                                    <a href="https://linkedin.com/">Montse</br>Puyalto</a>
                                 </h3><!-- /.team-name -->
                                 <span class="team-one__item__designation">Sales Coordinator</span><!-- /.team-designation -->
                                 <div class="team-one__item__social-wrapper">
@@ -575,7 +575,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Iago.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
@@ -592,7 +592,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Adrian.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
@@ -609,7 +609,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Daniel.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
@@ -626,7 +626,7 @@
                     <div class="col-xl-2 col-md-4 col-sm-6 custom-width wow fadeInUp animated" data-wow-delay="100ms">
                         <div class="team-one__item">
                             <div class="team-one__item__image">
-                                <img src="assets/images/team/team-1-1.jpg" alt="ogency">
+                                <img src="assets/images/home/equipo/Stephanie.png" alt="ogency">
                             </div><!-- /.team-image -->
                             <div class="team-one__item__content">
                                 <h3 class="team-one__item__title">
