--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <div class="feature-one__item">
                             <!-- feature item start -->
                             <div class="feature-one__item__img">
-                                <img src="assets/images/feature/feature-1.jpg" alt="ogency">
+                                <img src="assets/images/home/bootcamps/España emprende.png" alt="ogency">
                             </div>
                             <div class="feature-one__item__content">
                                 <h4 class="feature-one__item__content--title">ESPAÑA EMPRENDE</h4>
@@ -220,7 +220,7 @@
                         <div class="feature-one__item">
                             <!-- feature item start -->
                             <div class="feature-one__item__img">
-                                <img src="assets/images/feature/feature-2.jpg" alt="ogency">
+                                <img src="assets/images/home/bootcamps/Talento joven.png" alt="ogency">
                             </div>
                             <div class="feature-one__item__content">
                                 <h4 class="feature-one__item__content--title">TALENTO JOVEN</h4>
@@ -264,7 +264,7 @@
                         <div class="feature-one__item">
                             <!-- feature item start -->
                             <div class="feature-one__item__img">
-                                <img src="assets/images/feature/feature-7.jpg" alt="ogency">
+                                <img src="assets/images/home/bootcamps/Primer.png" alt="ogency">
                             </div>
                             <div class="feature-one__item__content">
                                 <h4 class="feature-one__item__content--title">PRIMER</h4>
