--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <!-- slider item start -->
                     <div class="main-slider__two__item">
                         <!-- bg image start -->
-                        <div class="main-slider__two__bg" style="background-image: url(assets/images/backgrounds/page-header-bg-1-1.jpg);"></div>
+                        <div class="main-slider__two__bg" style="background-image: url(assets/images/home/banner/Principal.png);"></div>
                         <!-- bg image end -->
                         <!-- bg image overlay start -->
                         <div class="main-slider__two__overlay" style="background-image: url(assets/images/backgrounds/slider-2-bg-overlay.png);"></div>
@@ -133,7 +133,7 @@
                             <!-- about thumb start -->
                             <div class="about-one__thumb__round--top"></div>
                             <div class="about-one__thumb__img">
-                                <img src="assets/images/resources/about-1-2.png" alt="ogency">
+                                <img src="assets/images/home/about us/about us.png" alt="ogency">
                             </div>
                             <div class="about-one__thumb__round--bottom"></div>
                         </div><!-- about thumb end -->
@@ -796,7 +796,7 @@
                     <div class="col-lg-6">
                         <div class="ogency-stretch-element-inside-column">
                             <div class="ogency-stretch__image wow slideInRight animated" data-wow-delay="400ms">
-                                <img src="assets/images/resources/contact-1.jpg" alt="ogency">
+                                <img src="assets/images/home/contacto/contacto.png" alt="ogency">
                                 <div class="ogency-stretch__image__angle-top"></div>
                                 <div class="ogency-stretch__image__angle-middle"></div>
                                 <div class="ogency-stretch__image__angle-bottom"></div>
